--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["oa-takahashi <oa-takahashi@kddi.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+boto3 = "^1.16.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
