--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,12 @@ authors = ["oa-takahashi <oa-takahashi@kddi.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 boto3 = "^1.16.0"
+black = "^20.8b1"
+isort = "^5.6.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+moto = "^1.3.16"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
