--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,8 @@ authors = ["oa-takahashi <oa-takahashi@kddi.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 boto3 = "^1.16.0"
-black = "^20.8b1"
-isort = "^5.6.4"
 numpy = "^1.19.4"
+arrow = "^0.17.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
